first node/express mvc api NO database

--- a/02-express-tutorial/methods-public/javascript.html
+++ b/02-express-tutorial/methods-public/javascript.html
@@ -66,13 +66,15 @@
       btn.addEventListener('click', async (e) => {
         e.preventDefault()
         const nameValue = input.value
-
+        console.log(nameValue)
         try {
           const { data } = await axios.post('/api/people', { name: nameValue })
+          console.log(data)
           const h5 = document.createElement('h5')
-          h5.textContent = data.person
+          h5.textContent = data.data
           result.appendChild(h5)
-        } catch (error) {
+        } 
+        catch (error) {
           // console.log(error.response)
           formAlert.textContent = error.response.data.msg
         }
