delete to recap

--- a/notas.html
+++ b/notas.html
@@ -1625,7 +1625,7 @@ SECTION 6: TASK MANAGER API
                     transform: 
                         function, Mongoose calls this function when you call Document#toJSON() function, including when you JSON.stringify() a document.
 
-                VALIDATIOS
+                VALIDATIONS
                     At the moment the schema allows empty properties and empty objects. 
 
                     Validation is defined in the SchemaType
@@ -1829,7 +1829,7 @@ SECTION 7: STORE API
         STRING SYNTAX
              -: will flag path as excluded
             "": when a path does not have a prefix, it is included.
-            + :forces incl;usion of the pat.
+            + :forces inclusion of the pat.
 
         HOW TO TELL USER IN API DOCS
             It is up to us to choose how we call the field that the user will use to select the properties to recieve back.
